result.yaml
apiVersion: v1
kind: Pod
metadata:
  name: result
  labels:
    app.kubernetes.io/name: result
spec:
  containers:
    - name: result
      image: mikesir87/examplevotingapp_result
