vote.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vote
  labels: 
    app.kubernetes.io/name: vote
spec:
  containers:
    - name: voting-app
      image: dockersamples/examplevotingapp_vote:before
