voting-app-infra.yaml
apiVersion: v1
kind: Service
metadata: 
  name: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: db
---
apiVersion: v1
kind: Service
metadata: 
  name: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: redis
---
apiVersion: v1
kind: Service
metadata: 
  name: result
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: result
---
apiVersion: v1
kind: Service
metadata: 
  name: vote
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: vote
---
apiVersion: v1
kind: Pod
metadata: 
  name: db
  labels:
    app.kubernetes.io/name: db
spec:
  containers:
    - name: db
      image: postgres:9.6
      ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  containers:
    - name: redis
      image: redis:alpine
      args:
        - redis-server
        - --appendonly
        - "yes"
      ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Pod
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
spec:
  containers:
    - name: worker
      image: mikesir87/votingapp-worker
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
spec:
  rules:
    - host: vote.local.mikesir87.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result
spec:
  rules:
    - host: result.local.mikesir87.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
